<resources>
    <string name="app_name">DeliveryAtYourDoor</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="selectYourWard">Select Your Ward</string>
    <string name="wardzone">Ward Zone</string>
    <string name="wardNo">Ward No.</string>
    <string name="tv_link">This is the delivery Link</string>
    <string name="selectward">Select Ward</string>
    <string name="dashward">Dashward</string>
    <string name="logout">LogOut</string>
    <string name="proceed">Proceed</string>
    <string name="totalOrders">Total Orders:</string>
    <string name="totalAmount">Total Amounts:</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="serchBtn">Search</string>
    <string name="orderid">Order ID :</string>
    <string name="date">Date :</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="textAskingForOtp">Ask the customer to provide OTP to make it complete. </string>
    <string name="noproducts">No Products Found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="noitems">No Items in the list</string>
    <!--String array for Ward Zone and ward number -->
    <string-array name="wardzone_array">
        <item>North</item>
        <item>South</item>
    </string-array>
    <string-array name="wards_no">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
</resources>
