<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DeliverySelectYourWard">
        <include
            layout="@layout/maintoolbar"
            android:id="@+id/include_bookingdetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"/>


    <LinearLayout
        android:id="@+id/lv_wardzoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_below="@+id/include_bookingdetails">



        <LinearLayout
            android:id="@+id/lh_wardZone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/lh_wardZone_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/wardZone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wardzone"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <!--<EditText
                    android:id="@+id/signUpPageCodeEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/colordark_grey"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"/>-->

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/wardZone_spinner"
                    android:layout_width="wrap_content"
                    android:autofillHints="code"
                    android:layout_height="20dp"
                    android:scrollbarSize="14sp">
                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lh_wardno"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >


            <LinearLayout
                android:id="@+id/lh_wardno_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/wardno_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wardNo"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <!--<EditText
                    android:id="@+id/signUpPageCodeEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/colordark_grey"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"/>-->

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/wardno_spinner"
                    android:layout_width="wrap_content"
                    android:autofillHints="code"
                    android:layout_height="20dp"
                    android:scrollbarSize="14sp">
                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_link"
            android:text="@string/tv_link"
            android:textColor="@color/colorlightblue"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lv_proceedLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:text="@string/proceed"/>
    </LinearLayout>

    </RelativeLayout>